--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <script>
       // REDIRECIONAMENTO LOADING
       function redirectTime() {
-        window.location = "../";
+        window.location = "../codigo1/";
       }
       // REDIRECIONAMENTO LOADING
 
