--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <script>
       // REDIRECIONAMENTO LOADING
       function redirectTime() {
-        window.location = "../codigo1/";
+        window.location = "https://serie-pix.github.io/inicio/codigo1/";
       }
       // REDIRECIONAMENTO LOADING
 
